--- a/src/pages/Home/AllProducts/AllProducts.css
+++ b/src/pages/Home/AllProducts/AllProducts.css
@@ -1,8 +1,38 @@
 .product img {
-    width: 100%;
-
+    width: 400px;
+    height: 400px;
 }
 
 .product {
-    align-items: center;
+    text-align: center;
+
+
+}
+
+.product-name {
+    color: #9c0c0c;
+    text-transform: uppercase;
+}
+
+.product-btn {
+    background-color: #8e1111;
+    border: none;
+    color: white;
+    padding: 10px 50px;
+    text-align: center;
+    font-size: 16px;
+    border-radius: 20px;
+
+}
+
+.product-btn:hover {
+    border: 2px solid #8e1111;
+    background-color: white;
+    color: #8e1111;
+}
+
+@media only screen and (max-width: 800px) {
+    .product img {
+        width: 100%;
+    }
 }
