--- a/src/pages/Home/Banner/Banner.css
+++ b/src/pages/Home/Banner/Banner.css
@@ -17,19 +17,24 @@
     text-align: center;
     font-size: 16px;
 
-    opacity: 1;
-    transition: 0.3s;
 }
 
 .btn:hover {
     border: 2px solid #c82323;
     background-color: #c823230d;
     color: white;
+
 }
 
-.year-display {
+.special-text {
     font-family: 'Smooch', cursive;
     color: #c82323;
     font-size: 50px;
 
+}
+
+@media only screen and (max-width: 800px) {
+    .banner-img {
+        margin: 0;
+    }
 }
