--- a/src/pages/Footer/SocialLink/SocialLink.css
+++ b/src/pages/Footer/SocialLink/SocialLink.css
@@ -1,12 +1,12 @@
 .social-link {
-    background-color: #8e1111;
+    background-color: #c6bdbd;
     height: 50px;
 }
 
 .social-link i {
-    font-size: 30px;
-    color: rgb(249, 231, 231);
-    justify-content: center;
+    font-size: 20px;
+    color: #8e1111;
+
     padding: 10px;
 }
 
